# xontrib-rc-awesome

./: .gitattributes  .gitignore  LICENSE  README  README.md  README.xsh  pyproject.toml  requirements.txt  setup.py  xonshrc
.github/: FUNDING.yml
.github/workflows/: python-app.yml
xontrib/: rc_awesome.xsh
